# multivector-vs-singlevector-search

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DATA_SETUP.md  DESIGN.md  Dockerfile  GIT_GUIDELINES.md  README.md  REPOSITORY_SUMMARY.md  app_logs.txt  demo.py  docker-compose.yml  evaluation_results.json  generate_embeddings_simple.py  index_to_vespa.py  main.py  manage_data.py  muvera.py  pyproject.toml  quick_start.sh  requirements.txt  run.sh  search_evaluation.py  setup.py  start_ui.sh  test_multi_vector.py  test_simple_tensor.py  test_web_ui.py  web_ui.py
app/api/: search_routes.py  system_routes.py
app/core/: config.py  search_service.py
app/templates/: index.html
app/utils/: logging_config.py  rate_limiter.py  validators.py
config/: default.yaml
data/: DATA_MANIFEST.json
data/embeddings/: metadata.json
data/processed/: qrels.jsonl  queries.jsonl
scripts/data_prep/: download_msmarco.py  download_simple.py  generate_embeddings.py
scripts/setup/: install_dependencies.sh  start_vespa.sh
src/core/: config.py  index_to_vespa.py
src/data/: process_data_simple.py
src/evaluation/: search_evaluation.py
src/ui/templates/: index.html
static/: style.css
templates/: index.html
tests/: test_web_ui.py
vespa-app/: services.xml
vespa-app/schemas/: multi_vector_document.sd  single_vector_document.sd
vespa/schemas/: multi_vector_document.sd
